--- a/SocialNetwork/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork/Views/Shared/_Layout.cshtml
@@ -106,12 +106,15 @@
 
     </header>
     <div id="createPostPopupBG">
-        <div id="addPostForm">
+        <div id="close_create-post_popup" style="width: 30px; position: absolute; right: 15px; top: 15px;cursor:pointer">
+            <img src="~/Img/close.png"/>
+        </div>
+        <div style="background-color:white" id="addPostForm">
             <div></div>
             <div id="imageChooseForm" class="mb-3">
 
                 <form>
-                    <input style="" multiple class="form-control" type="file" id="formFileMultiple">
+                    <input style="" multiple class="form-control" type="file" id="formFileMultiple" hidden>
 
                     <div id="ChooseFilesButton">
                         <span>Choose photos</span>
@@ -124,183 +127,246 @@
                     <path d="M78.2 41.6L61.3 30.5c-2.1-1.4-4.9-.8-6.2 1.3-.4.7-.7 1.4-.7 2.2l-1.2 20.1c-.1 2.5 1.7 4.6 4.2 4.8h.3c.7 0 1.4-.2 2-.5l18-9c2.2-1.1 3.1-3.8 2-6-.4-.7-.9-1.3-1.5-1.8zm-1.4 6l-18 9c-.4.2-.8.3-1.3.3-.4 0-.9-.2-1.2-.4-.7-.5-1.2-1.3-1.1-2.2l1.2-20.1c.1-.9.6-1.7 1.4-2.1.8-.4 1.7-.3 2.5.1L77 43.3c1.2.8 1.5 2.3.7 3.4-.2.4-.5.7-.9.9z" fill="currentColor"></path>
                 </svg>
             </div>
-            <div id="slider" hidden>
-                <div style="position: absolute; left: 13px; width: 20px; top: 10px;cursor:pointer" id="deleteImageFromGallery">
-                    <img src="~/Img/Delete.png" />
+            <div hidden id="slider" >
+                <div id="postCreationNav" style="background-color: #000000c7; position: absolute; width: 100%; left: 0; top: 25px; height: 25px;">
+                    <div style="position: absolute; left: 13px; width: 20px; top: 0px;cursor:pointer" id="deleteImageFromGallery">
+                        <img src="~/Img/Delete.png" />
+                    </div>
+                    <div style="position: relative; width: 20px; right: -354px;" id="save_choosen_photos">
+                        <span style="font-weight: bold; color: #0088ff">Next</span>
+                    </div>
                 </div>
-                <div style="left: 0; top: 184px; border: none; width: 25px; position: absolute; border-radius: 100%;" id="LeftButton">
+
+                <div class="create_post-gallery-arrows" style="left: 0; top: 184px; border: none; width: 25px; position: absolute; border-radius: 100%;" id="LeftButton">
                     <img src="~/Img/LeftArrow.png" />
                 </div>
-                <div style="right: 0; top: 184px; border: none; width: 25px; position: absolute; border-radius: 100%;transform:scale(-1,1);" id="RightButton">
+                <div class="create_post-gallery-arrows" style="right: 0; top: 184px; border: none; width: 25px; position: absolute; border-radius: 100%;transform:scale(-1,1);" id="RightButton">
                     <img src="~/Img/LeftArrow.png" />
                 </div>
             </div>
 
         </div>
-      
-    </div>
-    
-    @RenderBody()
+        <div hidden style="background-color:white" id="addPostInfoForm">
+            <input id="PostTitle" class="form-control" type="text" placeholder="Title" aria-label="default input example">
+            <br>
+            <textarea placeholder="Description" class="form-control" id="PostDescription" rows="3"></textarea>
+            <br><br>
+            <button type="button" class="btn btn-primary"  id="CreatePostButton">Create</button>
+        </div>
+        </div>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
-    @*    <script src="~/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
-    *@
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script>
-       
-        $(document).ready(function () {
-            var src = $("#profileImageSrc").text();
-            $("#createPostPopupBG").hide();
-            $("#searchLoader").hide();
-            $("#searchRecentlyUsersLoader").hide();
-            $("#profileImage").attr("src", src);
-            $("#listOfUsers").hide();
-            $("#input").click(function (e) {
-                e.preventDefault();
-                var SetData = $("#listOfUsers");
-                $("#listOfUsers").toggle();
-                if (SetData.children().length < 1) {
-                    $("#searchRecentlyUsersLoader").show();
-                }
+        @RenderBody()
 
-                $.ajax({
-                    type: "POST",
-                    url: "/UserPage/Search",
-                    success: function (result) {
-                        SetData.html("");
-                        $.each(result.recentlyUsers, function (index, value) {
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+        @*    <script src="~/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+        *@
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script>
 
-
-                            var Data = '<a href="/UserPage/Profile/' + value.username + '">' + '<li class="clearfix"> ' +
-                                '                        <img style="width:45px;height:45px" src="' + value.imageUrl + '" alt = "avatar" > ' +
-                                '                        <div class="about"><div class="name">' + value.username + '</div><div class="status">' +
-                                '                        <i class="fa fa-circle offline"></i>' + '</div>' +
-                                '                        </div>' +
-                                '                    </li>' + '</a>';
-                            SetData.append(Data);
-                            $("#searchRecentlyUsersLoader").hide();
-
-                        })
+            $(document).ready(function () {
+                var src = $("#profileImageSrc").text();
+                $("#createPostPopupBG").hide();
+                $("#searchLoader").hide();
+                $("#searchRecentlyUsersLoader").hide();
+                $("#profileImage").attr("src", src);
+                $("#listOfUsers").hide();
+                $("#input").click(function (e) {
+                    e.preventDefault();
+                    var SetData = $("#listOfUsers");
+                    $("#listOfUsers").toggle();
+                    if (SetData.children().length < 1) {
+                        $("#searchRecentlyUsersLoader").show();
                     }
 
-                });
-            });
-            $("#input").keyup(function (e) {
-                e.preventDefault();
-
-                var searchValue = $("input").val();
-                var SetData = $("#listOfUsers");
-
-                $("#searchLoader").show();
-                $.ajax({
-                    type: "POST",
-                    url: "/UserPage/Search?value=" + searchValue,
-                    contentType: "html",
-                    success: function (result) {
-                        SetData.html("");
-                        if (result.foundUsers.length != 0) {
-                            $.each(result.foundUsers, function (index, value) {
-
-
-                                var Data = '<a href="/UserPage/Profile/' + value.userIdentity.username + '">' + '<li class="clearfix"> ' +
-                                    '                        <img style="width:45px;height:45px" src="' + value.userInfo.profileImage + '" alt = "avatar" > ' +
-                                    '                        <div class="about"><div class="name">' + value.userIdentity.username + '</div><div class="status">' +
-                                    '                        <i class="fa fa-circle offline"></i>' + value.userInfo.city + '</div>' +
-                                    '                        </div>' +
-                                    '                    </li>' + '</a>';
-                                SetData.append(Data);
-                                $("#searchLoader").hide();
-
-                            })
-                        } else {
+                    $.ajax({
+                        type: "POST",
+                        url: "/UserPage/Search",
+                        success: function (result) {
+                            SetData.html("");
                             $.each(result.recentlyUsers, function (index, value) {
 
 
-                                var data = '<a href="/UserPage/Profile/' + value.username + '">' + '<li class="clearfix"> ' +
+                                var Data = '<a href="/UserPage/Profile/' + value.username + '">' + '<li class="clearfix"> ' +
                                     '                        <img style="width:45px;height:45px" src="' + value.imageUrl + '" alt = "avatar" > ' +
                                     '                        <div class="about"><div class="name">' + value.username + '</div><div class="status">' +
                                     '                        <i class="fa fa-circle offline"></i>' + '</div>' +
                                     '                        </div>' +
                                     '                    </li>' + '</a>';
-                                SetData.append(data);
-                                $("#searchLoader").hide();
+                                SetData.append(Data);
+                                $("#searchRecentlyUsersLoader").hide();
 
                             })
                         }
 
+                    });
+                });
+                $("#input").keyup(function (e) {
+                    e.preventDefault();
+
+                    var searchValue = $("input").val();
+                    var SetData = $("#listOfUsers");
+
+                    $("#searchLoader").show();
+                    $.ajax({
+                        type: "POST",
+                        url: "/UserPage/Search?value=" + searchValue,
+                        contentType: "html",
+                        success: function (result) {
+                            SetData.html("");
+                            if (result.foundUsers.length != 0) {
+                                $.each(result.foundUsers, function (index, value) {
+
+
+                                    var Data = '<a href="/UserPage/Profile/' + value.userIdentity.username + '">' + '<li class="clearfix"> ' +
+                                        '                        <img style="width:45px;height:45px" src="' + value.userInfo.profileImage + '" alt = "avatar" > ' +
+                                        '                        <div class="about"><div class="name">' + value.userIdentity.username + '</div><div class="status">' +
+                                        '                        <i class="fa fa-circle offline"></i>' + value.userInfo.city + '</div>' +
+                                        '                        </div>' +
+                                        '                    </li>' + '</a>';
+                                    SetData.append(Data);
+                                    $("#searchLoader").hide();
+
+                                })
+                            } else {
+                                $.each(result.recentlyUsers, function (index, value) {
+
+
+                                    var data = '<a href="/UserPage/Profile/' + value.username + '">' + '<li class="clearfix"> ' +
+                                        '                        <img style="width:45px;height:45px" src="' + value.imageUrl + '" alt = "avatar" > ' +
+                                        '                        <div class="about"><div class="name">' + value.username + '</div><div class="status">' +
+                                        '                        <i class="fa fa-circle offline"></i>' + '</div>' +
+                                        '                        </div>' +
+                                        '                    </li>' + '</a>';
+                                    SetData.append(data);
+                                    $("#searchLoader").hide();
+
+                                })
+                            }
+
+                        }
+                    })
+                })
+                $("#addPostIcon").click(function (e) {
+                    e.stopPropagation();
+                    $("#createPostPopupBG").fadeToggle();
+                })
+
+
+
+
+                var input = $("#formFileMultiple");
+                var files = [];
+                var index = 0;
+                input.change(function () {
+                    $("#imageChooseForm").hide();
+                    input.html("");
+                    files = [];
+                    for (var i = 0; i < input[0].files.length; i++) {
+                        files.push(input[0].files[i]);
+                    }
+                    CheckGalleryItemsCount(files.length);
+
+                    if (files.length > 1) {
+                        $("#slider").removeAttr("hidden");
+                    }
+
+                    $("#addPostForm").css("background-image", 'url(' + URL.createObjectURL(files[0]) + ')')
+                })
+
+                $("#ChooseFilesButton").click(function (e) {
+
+                    $("#formFileMultiple").trigger("click");
+
+                });
+                //Gallery
+                $("#RightButton").click(function () {
+
+                    if (index < files.length - 1) {
+                        index++;
+                    } else {
+                        index = 0;
+                    }
+
+                    $("#addPostForm").css("background-image", 'url(' + URL.createObjectURL(files[index]) + ')')
+                })
+                $("#LeftButton").click(function () {
+
+
+                    if (index > 0) {
+                        index--;
+                    } else {
+                        index = files.length - 1;
+                    }
+
+                    $("#addPostForm").css("background-image", 'url(' + URL.createObjectURL(files[index]) + ')')
+                })
+                $("#deleteImageFromGallery").click(function () {
+
+                    files.splice(index, 1);
+
+
+                    $("#addPostForm").css("background-image", 'url(' + files[0] + ')')
+                    CheckGalleryItemsCount(files.length);
+                    if (files.length == 0) {
+                        $("#slider").attr("hidden", true);
+                        $("#imageChooseForm").show();
+                        input.val(null);
                     }
                 })
-            })
-            $("#addPostIcon").click(function (e) {
-                e.stopPropagation();
-                $("#createPostPopupBG").fadeToggle();
-            })
-         
-
-
-
-            var input = $("#formFileMultiple");
-            var files = [];
-            var index = 0;
-            var reader;
-            input.change(function () {
-                $("#imageChooseForm").hide();
-            
-               
-                input.html("");
-                files = [];
-                for (var i = 0; i < input[0].files.length; i++) {
-                    files.push(URL.createObjectURL(input[0].files[i]));
-                }
-                if (files.length > 1) {
-                    $("#slider").removeAttr("hidden");
-                }
-                
-                $("#addPostForm").css("background-image", 'url(' + files[0] + ')')
-                sessionStorage.setItem("photo", JSON.stringify(files));
-            })
-
-            $("#ChooseFilesButton").click(function (e) {
-      
-                var request = new XMLHttpRequest();
-                var form = new FormData();
-                
-            });
-            //Gallery
-            $("#RightButton").click(function() {
-                if (index < files.length-1) {
-                    index++;
-                } else {
-                    index = 0;
-                }
-                
-                $("#addPostForm").css("background-image", 'url(' + files[index] + ')')
-            })
-            $("#LeftButton").click(function () {
-                if (index > 0) {
-                    index--;
-                } else {
-                    index = files.length-1;
-                }
-
-                $("#addPostForm").css("background-image", 'url(' + files[index] + ')')
-            })
-            $("#deleteImageFromGallery").click(function () {
-                alert("clicked")
-                files.splice(index, 1);
-                if (index - 1 < 0) index = files.length - 1;;
-                $("#addPostForm").css("background-image", 'url(' + files[index] + ')')
-                if (files.length == 0) {
+                $("#save_choosen_photos").click(function () {
                     $("#slider").attr("hidden", true);
+                    $("#addPostInfoForm").removeAttr("hidden");
+
+                });
+                $("#CreatePostButton").click(function () {
+                    var postTitle = $("#PostTitle").val();
+                    var postDescription = $("#PostDescription").val();
+
+
+                    var formData = new FormData();
+                    formData.append("Title", postTitle);
+                    formData.append("Description", postDescription);
+
+                    for (var i = 0; i < files.length; i++){
+                        formData.append(files[i].name, files[i]);
+                    }
+                    $.ajax({
+                        type: "POST",
+                        url: "/UserPage/CreatePost/",
+                        cache: false,
+                        contentType: false,
+                        processData:false,
+                        data: formData,
+                        success: function (json) {
+                            alert(json.path);
+                        }
+                    })
+                })
+                $("#close_create-post_popup").click(function () {
+
+                    $("#createPostPopupBG").hide();
+                    $("#slider").attr("hidden", true);
+                    $("#addPostInfoForm").attr("hidden", true);
                     $("#imageChooseForm").show();
-                    input.val(null);
-                } 
-            })
-          
-        });
-    </script>
-    @await RenderSectionAsync("Scripts", required: false)
+                    files = [];
+                    $("#addPostForm").css("background-image", "none")
+                });
+            });
+            function CheckGalleryItemsCount(items) {
+                if (items <= 1) {
+                    $("#slider").removeAttr("hidden");
+                    $(".create_post-gallery-arrows").hide();
+                  
+                }
+                else {
+                    $("#slider").removeAttr("hidden");
+                    $(".create_post-gallery-arrows").show();
+                    
+                }
+            }
+        </script>
+        @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
