--- a/SocialNetwork/wwwroot/css/UserPage/LayoutStyle.css
+++ b/SocialNetwork/wwwroot/css/UserPage/LayoutStyle.css
@@ -53,12 +53,29 @@
     left: 570px;
     padding: 115px;
 }
-    .people-list {
-        -moz-transition: .5s;
-        -o-transition: .5s;
-        -webkit-transition: .5s;
-        transition: .5s
-    }
+#addPostInfoForm {
+    padding-top: 90px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 400px;
+    height: 400px;
+    top: 100px;
+    text-align: center;
+    border-radius: 30px;
+    background-color: white;
+    background: no-repeat center;
+    background-size: cover;
+    box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 40%);
+    position: fixed;
+    z-index: 1;
+    left: 570px;
+}
+.people-list {
+    -moz-transition: .5s;
+    -o-transition: .5s;
+    -webkit-transition: .5s;
+    transition: .5s
+}
 .clearfix:after {
     visibility: hidden;
     display: block;
